--- a/templates/item_detail.html
+++ b/templates/item_detail.html
@@ -1,15 +1,11 @@
 <!-- templates/item_detail.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>{{ item.name }} - KinbenNaki</title>
-</head>
-<body>
-  <h1>{{ item.name }}</h1>
-  <img src="{{ item.image.url }}" alt="{{ item.name }}">
-  <p>${{ item.price }}</p>
-  <p>{{ item.description }}</p>  <!-- Assuming your Item model has a description field -->
-  <a href="{% url 'all_items' %}">Back to All Items</a>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+  <div class="item-detail">
+    <h2>{{ item.name }}</h2>
+    <img src="{{ item.image.url }}" alt="{{ item.name }}">
+    <p>Price: ৳{{ item.price }}</p>
+    <p>Description: {{ item.description }}</p>
+  </div>
+{% endblock %}
