--- a/templates/passchange.html
+++ b/templates/passchange.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Register</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
 <style>
@@ -13,7 +13,7 @@
     padding: 0;
   }
 
-  .registration-container {
+  .password-change-container {
     max-width: 600px;
     margin: 60px auto;
     background-color: #fff;
@@ -22,7 +22,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
 
-  .registration-container h2 {
+  .password-change-container h2 {
     text-align: center;
     color: #007bff;
     margin-bottom: 25px;
@@ -39,8 +39,6 @@
     color: #333;
   }
 
-  input[type="text"],
-  input[type="email"],
   input[type="password"] {
     padding: 10px;
     margin-bottom: 20px;
@@ -51,11 +49,11 @@
 
   input[type="submit"],
   button {
-    background-color: #007bff;
+    background-color: #348018;
     color: white;
     padding: 12px;
     border: none;
-    border-radius: 6px;
+    border-radius: 20px;
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -63,7 +61,8 @@
 
   input[type="submit"]:hover,
   button:hover {
-    background-color: #0056b3;
+    background-color: #1a3e0c;
+          border-radius: 20px;
   }
 
   .msg {
@@ -73,21 +72,25 @@
   }
 
   @media (max-width: 768px) {
-    .registration-container {
+    .password-change-container {
       padding: 20px;
       margin: 20px;
     }
   }
+
 </style>
 
-  <div class="container mt-5" style="max-width: 450px;">
-    <h3 class="mb-4 text-center">Create an Account</h3>
-    <form method="post">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit" class="btn btn-success w-100 mt-3">Register</button>
-    </form>
-    <p class="mt-3 text-center">Already have an account? <a href="{% url 'login' %}">Login here</a></p>
-  </div>
+
+
+{% block content %}
+  <h2>Change Password</h2>
+  <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Change</button>
+  </form>
+            <br>
+        <a href="{% url 'home' %}">Back to home</a>
+{% endblock %}
 </body>
 </html>
