--- a/templates/home.html
+++ b/templates/home.html
@@ -169,13 +169,13 @@
 
       <div class="collapse navbar-collapse">
         <!-- Left side -->
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Categories</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Weekly Deals</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Populars</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Savings</a></li>
-        </ul>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center">
+  <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+  <li class="nav-item"><a class="nav-link" href="{% url 'category_list' %}">Categories</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Weekly Deals</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Populars</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Savings</a></li>
+</ul>
 
         <!-- Center empty space -->
         <div class="nav-center-space"></div>
