--- a/templates/base.html
+++ b/templates/base.html
@@ -65,10 +65,12 @@
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="{% url 'all_items' %}">Categories</a></li>
-         <li class="nav-item">
-             <a class="nav-link" href="{% url 'weekly_deals' %}">Weekly Deals</a>
-         </li>
+       <li class="nav-item"><a class="nav-link" href="{% url 'category_list' %}">Categories</a></li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'weekly_deals' %}">Weekly Deals</a>
+        </li>
+
           <li class="nav-item"><a class="nav-link" href="#">Populars</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Savings</a></li>
         </ul>
