--- a/templates/home.html
+++ b/templates/home.html
@@ -253,7 +253,7 @@
     <div class="hero-section">
       <h1>Welcome to KinbenNaki</h1>
       <p>Your trusted place for fresh groceries and daily essentials.</p>
-      <a href="#" class="btn btn-success mt-3">Shop Now</a>
+      <a href="{% url 'category_list' %}" class="btn btn-success mt-3">Shop Now</a>
     </div>
   </div>
 
