--- a/templates/base.html
+++ b/templates/base.html
@@ -177,6 +177,7 @@
 
           <li class="nav-item"><a class="nav-link" href="#">Populars</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Savings</a></li>
+             <li class="nav-item"><a class="nav-link" href="{% url 'loyalty_rewards' %}">Loyalty Rewards</a></li>
         </ul>
 
         <div class="nav-center-space"></div>
