--- a/templates/home.html
+++ b/templates/home.html
@@ -179,6 +179,7 @@
 
   <li class="nav-item"><a class="nav-link" href="#">Populars</a></li>
   <li class="nav-item"><a class="nav-link" href="#">Savings</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'loyalty_rewards' %}">Loyalty Rewards</a></li>
 </ul>
 
         <!-- Center empty space -->
