--- a/templates/base.html
+++ b/templates/base.html
@@ -175,7 +175,7 @@
             <a class="nav-link" href="{% url 'weekly_deals' %}">Weekly Deals</a>
         </li>
 
-          <li class="nav-item"><a class="nav-link" href="#">Populars</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'popular_items' %}">Populars</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Savings</a></li>
              <li class="nav-item"><a class="nav-link" href="{% url 'loyalty_rewards' %}">Loyalty Rewards</a></li>
         </ul>
