--- a/templates/base.html
+++ b/templates/base.html
@@ -171,13 +171,16 @@
           <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
        <li class="nav-item"><a class="nav-link" href="{% url 'category_list' %}">Categories</a></li>
 
-        <li class="nav-item">
+
+
+          <li class="nav-item"><a class="nav-link" href="{% url 'popular_items' %}">Populars</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'offer_items' %}">Offer Products</a></li>
+             <li class="nav-item"><a class="nav-link" href="{% url 'loyalty_rewards' %}">Loyalty Rewards</a></li>
+
+              <li class="nav-item">
             <a class="nav-link" href="{% url 'weekly_deals' %}">Weekly Deals</a>
         </li>
 
-          <li class="nav-item"><a class="nav-link" href="{% url 'popular_items' %}">Populars</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Savings</a></li>
-             <li class="nav-item"><a class="nav-link" href="{% url 'loyalty_rewards' %}">Loyalty Rewards</a></li>
         </ul>
 
         <div class="nav-center-space"></div>
