--- a/templates/home.html
+++ b/templates/home.html
@@ -174,12 +174,13 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center">
   <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
   <li class="nav-item"><a class="nav-link" href="{% url 'category_list' %}">Categories</a></li>
-  <li class="nav-item"><a class="nav-link" href="#">Weekly Deals</a></li>
+
 
 
   <li class="nav-item"><a class="nav-link" href="#">Populars</a></li>
-  <li class="nav-item"><a class="nav-link" href="#">Savings</a></li>
+ <li class="nav-item"><a class="nav-link" href="{% url 'offer_items' %}">Offer Products</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'loyalty_rewards' %}">Loyalty Rewards</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Weekly Deals</a></li>
 </ul>
 
         <!-- Center empty space -->
