--- a/templates/register.html
+++ b/templates/register.html
@@ -50,7 +50,7 @@
 
     .register-container a {
       text-decoration: none;
-      color: #007bff;
+      color: #2f6d18;
     }
 
     .register-container a:hover {
