--- a/templates/home.html
+++ b/templates/home.html
@@ -225,7 +225,7 @@
 
 
         <ul class="navbar-nav mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="#">🛒 Cart</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">📞Contact </a></li>
           <div class="dropdown">
         <button class="drop">👥 Login / Register</button>
         <div class="dropdown-content">
