--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,9 @@
  <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f8f9fa;
+      background-color: rgba(242, 242, 242, 0.99);
     }
+
 
     .navbar {
       background-color: #ffffff;
@@ -186,7 +187,7 @@
         <div class="nav-center-space"></div>
 
             <ul class="navbar-nav mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="#">🛒 Cart</a></li>
+           <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">📞Contact</a></li>
           <div class="dropdown">
         <button class="drop">👥 Login / Register</button>
         <div class="dropdown-content">
